fix(core): align input groups styles
- align closer to the progressive filtering requirements

--- a/projects/elements/src/forms/control-group/control-group.css
+++ b/projects/elements/src/forms/control-group/control-group.css
@@ -1,6 +1,6 @@
 :host {
-  --color: var(--nve-sys-text-color);
-  --label-color: var(--nve-sys-text-muted-color);
+  --color: var(--nve-sys-interaction-field-color);
+  --label-color: var(--nve-sys-interaction-field-color);
   --_label-width: var(--label-width, 180px);
 }
 
