--- a/projects/elements/src/input/input-group.css
+++ b/projects/elements/src/input/input-group.css
@@ -1,16 +1,30 @@
+:host {
+  --background: var(--nve-sys-support-color);
+  --color: var(--nve-sys-interaction-field-color);
+  --border-radius: var(--nve-ref-border-radius-sm);
+}
+
+[internal-host] {
+  border-radius: var(--border-radius);
+  overflow: hidden;
+}
 
 .input-slot {
+  background: var(--background);
+  border-radius: var(--border-radius);
   flex-direction: row;
   flex-wrap: nowrap;
-  gap: 2px;
+  gap: 1px;
 }
 
 slot[name='label'] {
   align-self: center;
 }
 
-:host {
-  border-radius: var(--nve-ref-border-radius-sm);
+::slotted(nve-icon-button) {
+  --background: var(--nve-sys-interaction-field-background);
+  --color: var(--nve-sys-support-emphasis-color);
+  --border-radius: 0;
 }
 
 ::slotted([nve-control]) {
